# mongodbtui

./: .gitignore  Cargo.toml  README.md  install.sh
src/: app.rs  main.rs  theme.rs  utils.rs
src/db/: client.rs  handler.rs  import_export.rs  mod.rs
src/keybindings/: editor.rs  insert.rs  mod.rs  normal.rs
src/tui/: events.rs  filepicker.rs  fpicker_events.rs  input.rs  mod.rs
src/widgets/: connection_panel.rs  documents.rs  header.rs  help_popup.rs  import.rs  mod.rs  popup.rs  render_editor.rs  toolbar.rs
