[package]
name = "mongodbtui"
version = "0.1.0"
edition = "2024"

[dependencies]
bson = "2.14.0"
crossterm = "0.29.0"
dirs = "6.0.0"
edit = "0.1.5"
futures = "0.3.31"
mongodb = "3.2.3"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
